--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.root=info
 logging.level.hello.springmvc=debug
 
 spring.messages.basename=messages,errors
+
+server.servlet.session.tracking-modes=cookie
