--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ logging.level.hello.springmvc=debug
 spring.messages.basename=messages,errors
 
 server.servlet.session.tracking-modes=cookie
+
+# ?????? ???? ???? ?????
+server.error.whitelabel.enabled=false
