--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ server.servlet.session.tracking-modes=cookie
 
 # ?????? ???? ???? ?????
 server.error.whitelabel.enabled=false
+
+server.error.include-exception=true
+server.error.include-message=on_param
+server.error.include-stacktrace=on_param
+server.error.include-binding-errors=on_param
