--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,24 @@
-logging.level.root=info
-
-logging.level.hello.springmvc=debug
-spring.messages.basename=messages,errors
-
-server.servlet.session.tracking-modes=cookie
-
-# ?????? ???? ???? ?????
-server.error.whitelabel.enabled=false
-
-server.error.include-exception=true
-server.error.include-message=on_param
-server.error.include-stacktrace=on_param
-server.error.include-binding-errors=on_param
-
-# file upload
-logging.level.org.apache.coyote.http11=debug
-
-# ? ?? ?
-spring.servlet.multipart.max-file-size=1MB
-# ?? ??
-spring.servlet.multipart.max-request-size=10MB
-
-#spring.servlet.multipart.enabled=false
-
-file.dir=/Users/hoon/Dropbox/Mac/Documents/Learning/spring-mvc2/static/file/
+#logging.level.root=info
+#
+#logging.level.hello.springmvc=debug
+#spring.messages.basename=messages,errors
+#
+#server.servlet.session.tracking-modes=cookie
+#
+## ?????? ???? ???? ?????
+#server.error.whitelabel.enabled=false
+#
+#server.error.include-exception=true
+#server.error.include-message=on_param
+#server.error.include-stacktrace=on_param
+#server.error.include-binding-errors=on_param
+#
+## file upload
+#logging.level.org.apache.coyote.http11=debug
+#
+## ? ?? ?
+#spring.servlet.multipart.max-file-size=1MB
+## ?? ??
+#spring.servlet.multipart.max-request-size=10MB
+#
+##spring.servlet.multipart.enabled=false
